--- a/.github/ISSUE_TEMPLATE/question-or-support.yaml
+++ b/.github/ISSUE_TEMPLATE/question-or-support.yaml
@@ -8,7 +8,7 @@ body:
       value: |
         **Need help or have a question?**  
         This form is for general usage questions or support requests.  
-        Please check the [documentation](https://github.com/owndev/Open-WebUI-Functions) and existing [issues](https://github.com/owndev/Open-WebUI-Functions/issues) before submitting.
+        Please check the [documentation](https://own.dev/github-owndev-open-webui-functions) and existing [issues](https://own.dev/github-owndev-open-webui-functions-issues) before submitting.
 
   - type: input
     attributes:
